--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,6 +14,35 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+.card-md {
+  /* margin: 10px; */
+  min-height: 73.67px;
+  border-radius: 2px;
+  width: 100%;
+  font-size: 1.4rem;
+  background: #fff;
+  -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+}
+.card-header-md {
+  font-size: 1.6rem;
+  color: #222;
+  padding: 3px;
+}
+.card-content-md {
+  padding: 5px;
+  font-size: 1.4rem;
+  line-height: 1.5;
+}
+@font-face {
+  font-family: 'Digital7';
+  src: url('../assets/fonts/digital-7.ttf');
+}
+
+@font-face {
+  font-family: 'digital-7 (italic)';
+  src: url('../assets/fonts/digital-7\ \(italic\).ttf');
+}
 .hidden{
     display:none;
   }
