--- a/src/pages/skin-digital-uno/skin-digital-uno.scss
+++ b/src/pages/skin-digital-uno/skin-digital-uno.scss
@@ -1,3 +1,9 @@
 page-skin-digital-uno {
+    .card-indicadores{
+        font-family: 'Digital7';
+        font-size: 2rem;
+        font-weight: bold;
+
+    }
 
 }
