--- a/src/pages/skin-digital-uno/skin-digital-uno.scss
+++ b/src/pages/skin-digital-uno/skin-digital-uno.scss
@@ -5,5 +5,33 @@ page-skin-digital-uno {
         font-weight: bold;
 
     }
+    .card-indicadores-titulo{
+        font-family: 'Digital7';
+        font-size: 1.3rem;
+        font-weight: bold;
+        padding: 3px;
+
+    }
+    .card-indicadores-footer{
+        font-family: 'Digital7';
+        font-size: 1rem;
+        font-weight: bold;
+
+    }
+
+      
+      #content {
+        display: flex;
+        flex-direction: column;
+        min-height: 100%;
+        background-color: #e3f2fd;
+        flex: 1;
+        padding: 20px;
+      }
+      
+      #footer {
+        background-color: #f3e5f5;
+        padding: 20px;
+      }
 
 }
